Project description updated.

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.restmonkeys</groupId>
     <artifactId>logger</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <name>ReversLogs</name>
+    <description>This ReversLogs project was created to help to collect more useful information from your application
+        logs.
+    </description>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <url>https://github.com/gimlet2/reverslogs</url>
+    <scm>
+        <url>https://github.com/gimlet2/reverslogs.git</url>
+    </scm>
+    <developers>
+        <developer>
+            <name>Andrei Chernyshev</name>
+            <url>https://github.com/gimlet2</url>
+        </developer>
+    </developers>
 
     <dependencies>
         <dependency>
@@ -18,6 +41,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.7</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
